fixed styling flex wrap of answers and check answers

--- a/src/index.css
+++ b/src/index.css
@@ -296,12 +296,6 @@ button:focus,
   stroke: var(--ftm-green);
 }
 
-.check-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .answer-section,
 .startSection {
   padding-bottom: 7em;
@@ -343,6 +337,9 @@ button:focus,
   }
   .ans-options {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 10em;
     flex-wrap: wrap;
     flex-grow: 3;
   }
